--- a/mealmatch/pubspec.yaml
+++ b/mealmatch/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^5.4.4
   firebase_auth: ^5.0.0
   google_sign_in: ^6.2.0
+  shared_preferences: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
