--- a/mealmatch/pubspec.yaml
+++ b/mealmatch/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.1.0
   http: ^1.1.0
   fl_chart: ^0.65.0 
+  video_player: ^2.8.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -70,6 +71,9 @@ flutter:
      - assets/images/header_logo.png
      - assets/images/app_logo.png
      - assets/images/dummy_profile.png
+     - assets/images/greet_img.png
+     - assets/images/greetscreen.png
+     - assets/videos/greet_animation.mp4
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -82,11 +86,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: MuseoModerno
+      fonts:
+        - asset: assets/fonts/MuseoModerno-Regular.ttf
+        - asset: assets/fonts/MuseoModerno-Bold.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
