--- a/mealmatch/pubspec.yaml
+++ b/mealmatch/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.1.0
   fl_chart: ^0.65.0 
   video_player: ^2.8.2
+  image_picker: ^1.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
